policy/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sexternaldatacosign
spec:
  crd:
    spec:
      names:
        kind: K8sExternalDataCosign
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldata

        violation[{"msg": msg}] {
          # build a list of keys containing images
          images := [img | img = input.review.object.spec.template.spec.containers[_].image]

          # send external data request
          response := external_data({"provider": "cosign-gatekeeper-provider", "keys": images})

          response_with_error(response)

          msg := sprintf("response: %v", [response])
        }

        response_with_error(response) {
          count(response.errors) > 0
        }

        response_with_error(response) {
          count(response.system_error) > 0
        }
